# -The-FGC-Recommender

./: .env  .gitignore  DataMaker.ipynb  Dockerfile.koyeb  Games.csv  NewGames.csv  Pruebas_Querys.cypher  Pruebas_Querys.ipynb  QueryCreations.ipynb  Questions.json  README.md  Respuestas.csv  TODO.md  TODOS.MD  package-lock.json  pyvenv.cfg
Data/: Art of Fighting 2.csv  Art of Fighting 3.csv  Art of Fighting.csv  Bloddy Roar 4.csv  Bloody Roar 2.csv  Bloody Roar 3.csv  Bloody Roar.csv  DNF Duel.csv  Dead or Alive 2.csv  Dead or Alive 3.csv  Dead or Alive 4.csv  Dead or Alive 5.csv  Dead or Alive 6.csv  Divekick.csv  Fantasy Strike.csv  Fatal Fury 2.csv  Fatal Fury Special.csv  Fatal Fury.csv  Figthing EX Layer.csv  Figtning Vipers.csv  Guilty Gear Strive.csv  Guilty Gear XX Accent Core Plus R.csv  Guilty Gear Xrd Rev 2.csv  Guilty Gear.csv  Hyper Street Fighter II.csv  Injustice 2.csv  Injustice: Gods Among Us.csv  JoJo's Bizarre Adventure: All-Star Battle R.csv  JoJo's Bizarre Adventure: Heritage for the Future.csv  Killer Instinct (2013).csv  Killer Instinct 2 Classic.csv  Killer Instinct 2.csv  Killer Instinct Classic.csv  Killer Instinct Gold.csv  Killer Instinct.csv  Marvel Super Heroes vs. Street Fighter.csv  (+93 more)
backend/: Cargo.toml
backend/src/: main.rs  tests.rs
backend/src/API/: ApiHandler.rs  QueryManager.rs
backend/src/api/: api_handler.rs  mod.rs  queries_structs_endpoint.rs  query_manager.rs
backend/src/api/questions_manager/: Questions.json  mod.rs  question_reader.rs
backend/src/api/utils/: hasher.rs  mod.rs  queries_structs_endpoint.rs
(+48 files in other folders)
